# computer

./: CMakeLists.txt
include/: computer.h  cpu.h  disk.h  gpu.h  kbd.h  ram.h
src/: CMakeLists.txt  main.cpp  my_comp.cpp
